# swb

./: .gitignore  CMakeLists.txt  CMakeLists_new.txt  CMakelists.txt  Doxyfile  Doxyfile.mac_osx  LICENSE  README.md  code.json  git_push.sh
cmake/: FindCurl.cmake  FindDISLIN.cmake  FindGCC.cmake  FindGfortran.cmake  FindHDF5.cmake  FindHDF5_HL.cmake  FindNetCDF.cmake  FindQuadMath.cmake  FindSzip.cmake  FindWinPthread.cmake  FindZlib.cmake  Toolchain_build_linux_target_mingw64.cmake  Toolchain_build_linux_target_mingw64.cmake~  find_programs_and_libraries.cmake  find_programs_and_libraries_simplified.cmake  options_and_targets.cmake  options_and_targets.cmake~  print_summary.cmake  version_control.cmake
doc/: readme.txt  readme_Windows.txt
doc/doxygen/: doxygen_entrydb_2548.tmp
doc/src/: Doxyfile.mac_osx  DoxygenLayout.xml  development__conventions.md  dir_output.md  directives.md  geotransformations.md  main.md  model_description.md  parameterization.md  scope_and_purpose.md  settings_for_specific_datasets.md  swb_irrigation_module_docs.md  variable_descriptions.md
example/: README.md  cleanup.bat  example_swb_control_file.ctl  make_output_directories.bat
example/input/: NLCD_2011_subset.asc  gSSURGO_HSG_cd_subset_4_soils.asc  gSSURGO_HSG_cd_subset_4_soils.prj
example/std_input/: LU_lookup_example.txt
include/ubuntu/: dislin.f90  dislin.mod  dislin_d.f90  netcdf.mod  typesizes.mod
include/ubuntu_x64/: dislin.f90  dislin.mod  netcdf.mod  typesizes.mod
lib/win64/: dislin.f90
presentations/: 02_SWB_WebEx_PROJ4_13MAR2014.pptx  03_SWB_WebEx_NetCDF_13MAR2014.pptx  Coshocton_Example_NAEW.odp  Coshocton_Example_NAEW.ppt  Intro_to_SWB-Background_and_capabilities.odp  README.md  SWB_02__Theory-Thornthwaite-mechanisms.pptx  SWB_03__Application__simple_case.pptx  SWB_04_5__Future_of_SWB.pptx  SWB_04__Application__advanced_case__Easter_Eggs.pptx  SWB_04__Future_of_SWB.pptx  SWB__Gridded_Rainfall_Data_Processing.pptx  Theoretical_Basis_for_SWB.odp  Theoretical_Basis_for_SWB.ppt  Theoretical_Basis_for_SWB.pptx
share/: swb.sublime-workspace  swb.zpi  swb.zwi  swb__mac.sublime-workspace  swb_cmake.sublime-project  swb_cmake.sublime-workspace
share/R-scripts/: .Rhistory  Coshocton_climate_1999.txt  Coshocton_climate_2000.txt  Coshocton_climate_2001.txt  Coshocton_climate_2004.txt  Coshocton_climate_2005.txt  SWB_compare_daily_mean.r  SWB_compare_mass_balances.r  SWB_mass_balance_plot.r  SWB_mass_balance_plot__fixed_Y-axis.r  Thornthwaite_Mather_SWB_calculations.R  Thornthwaite_Mather_SWB_table_2_summarization.R  Thornthwaite_Mather_SWB_table_summarization.R  Thornthwaite_Mather_cell_class.R  animate_ASCII_grid_generic.r  image_legend.r  matrix_manip.r  read_ASCII_grid_generic.r
share/compilation_environments/: 32-bit_compilation_environment.bat  64-bit_compilation_environment.bat  compilation_notes__CMake_on_Windows.md
share/example/: cleanup.bat  recharge.ctl
share/python/: read_SWB.py
share/standard_tables/: IRRIGATION_lookup.txt  IRRIGATION_lookup.xls  LU_lookup_Dripps.txt  LU_lookup_NLCD_FULLERTON.txt  TR-55 Land Use-Curve Number Table - per Dripps.xls  recharge_00_w_irrigation.ctl  soil-moisture-retention-extended.grd  soil-moisture-retention.xls
share/test_case/: cleanup.bat  recharge.ctl  recharge_dyn_lu.ctl
src/: CMakeLists.txt  CMakelists.txt  RLE.F90  control.F90  data_factory.F90  datetime.F90  datetime_class.F90  et_FAO56_crop_coefficients.F90  et_blaney_criddle.F90  et_crop_coefficients.F90  et_hargreaves.F90  et_jensen_haise.F90  et_thornthwaite_mather.F90  et_turc.F90  graph.F90  grid.F90  interception_base_class.F90  interception_exponential.F90  interception_gash.F90  interception_linear.F90  interpolators.F90  irrigation.F90  main.F90  meteorological_functions.F90  model.F90  netcdf4_support.F90  netcdf_c_api_interfaces.F90  netcdf_c_api_interfaces.f90  netcdf_support.F90  output.F90  r8lib.f90  runoff_curve_number.F90  sm_FAO56_crop_coefficients.F90  sm_thornthwaite_mather.F90  snow.F90  stats.F90  swb_python_interface.F90  swbread.F90  swbstats.F90  test_interception.F90  (+3 more)
src/dislin/: X11Dummy.c  XmDummy.c  glDummy.c
src/proj4/: custom_swb_functions.c  pj_init.c  pj_transform.c  proj_api.h.gch  proj_config.h  proj_i.exp
test/unit_tests/: CMakeLists.txt  fruit.F90  fruit.f90  fruit_util.F90  make_test_suite.py  test_datetime.F90  test_driver.F90
test_case/: example_swb_control_file.ctl
test_case/Markdown/: Coshocton_Data_Prep_Basic_Grids.Rmd  Coshocton_Data_Prep_Basic_Grids.html  Coshocton_Data_Prep_Basic_Grids.md  myterrain_fxn.r
test_case/Markdown_Lysimeter/: Coshocton_Lysimeter_Data.Rmd  Coshocton_Lysimeter_Data.html  Coshocton_Lysimeter_Data.md
test_case/Markdown_SCS_CN/: SCS_Curve_Number_Adventures.Rmd  SCS_Curve_Number_Adventures.html  SCS_Curve_Number_Adventures.md
test_case/input/: NED_10m_D8_Flow_Dir.prj
test_case/swb/: MEAN_RECHARGE_01-01-1999_to_12-31-2003.asc  OUTFLOW_8_8.ssf  RECHARGE_2_10.ssf  SOIL_MOISTURE_10_2.ssf  SOIL_MOISTURE_1_10.ssf  SOIL_MOISTURE_2_10.ssf  SUM_RECHARGE_01-01-1999_to_12-31-2003.asc  SUM_RECHARGE_1999.asc  SUM_RECHARGE_2000.asc  SUM_RECHARGE_2001.asc  SUM_RECHARGE_2002.asc  SUM_RECHARGE_2003.asc  recharge.ctl  recharge_120x120.ctl  recharge_120x120_nc.ctl  recharge_60x60.ctl  recharge_minimal.ctl
tests/general/: .Rhistory  CMakeLists.txt  GENERAL_COMPARISON_Thornthwaite-Mather_calcs.r  LU_LOOKUP.txt  LU_LOOKUP_single_cell.txt  MEAN_RECHARGE_1999_2000.asc  REGRESSION__compare_to_SWB_1_0.R  Thornthwaite_Mather_cell_class.R  awcCoarse.asc  cleanup.bat  hsgCoarse.asc  recharge.ctl  recharge_single_cell.ctl  swb_command_line_echo.txt  swb_future_final_pct_sm_1999.asc  swb_future_final_pct_sm_2000.asc  swb_future_final_snow_cover_1999.asc  swb_future_final_snow_cover_2000.asc
tests/irrigation/: CMakeLists.txt  D8_flow_direction_ESRI.asc  Daily_ET0_CROPWAT_1990.csv  FAO56_Irrigation_test_execution.r  IRRIGATION_LOOKUP.txt  (+10 more)
webpages/: SWB_NetCDF.html  SWB_code.html  SWB_faq.html  SWB_interpolation.html  SWB_irrigation_module.html  SWB_pubs.html  index.html  swb_irrigation_module_docs.html
(+1354 files in other folders)
